--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -18,8 +18,8 @@
 name: translations
 on:
   workflow_dispatch:
-  schedule:
-    - cron:  '0 0 * * 0'
+  #schedule:
+  #  - cron:  '0 0 * * 0'
 
 jobs:
   update-all-translations:
