--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -50,7 +50,8 @@ jobs:
         if: ${{ matrix.os == 'macos-13' }}
         run: |
           # Use GLM 1.0.0 as later versions don't build with clang
-          HOMEBREW_NO_AUTO_UPDATE=1 brew install --formula ./mk/brew/glm.rb --build-from-source
+          cp -rf ./mk/brew/glm.rb $(brew --repository homebrew/core)/Formula/
+          HOMEBREW_NO_AUTO_UPDATE=1 brew install glm --build-from-source
           brew install cmake bash rename libogg libvorbis glew \
                        openal-soft sdl2 sdl2_image libraqm freetype \
                        glib gtk-doc zlib physfs fmt
