--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -71,6 +71,7 @@ jobs:
           vcpkg install openal-soft:$Env:ARCH-windows
           vcpkg install sdl3:$Env:ARCH-windows
           vcpkg install sdl3-image[jpeg]:$Env:ARCH-windows
+          vcpkg install sdl3-ttf[harfbuzz]:$Env:ARCH-windows
           vcpkg install glm:$Env:ARCH-windows
           vcpkg install zlib:$Env:ARCH-windows
           vcpkg install fmt:$Env:ARCH-windows
