--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -123,6 +123,10 @@ jobs:
             libepoxy-dev:i386 \
             libglm-dev
 
+          # Patch dbus port file to work around dbus issue on 32-bit
+          # See https://github.com/microsoft/vcpkg/issues/40031
+          git apply mk/vcpkg/dbus.patch --directory=$env:VCPKG_INSTALLATION_ROOT
+          
           # Let's get out of this directory to disable vcpkg manifest mode.
           # Manifest mode is not adequate here because most dependencies can
           # be used via the system package manager.
