--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -56,17 +56,17 @@ jobs:
                        openal-soft sdl2 sdl2_image libraqm freetype \
                        glib gtk-doc zlib physfs fmt
           
-          ls -l /usr/local/opt/webp/lib/
-          ls -l /usr/local/opt/jpeg-xl/lib/
+          # ls -l /usr/local/opt/webp/lib/
+          # ls -l /usr/local/opt/jpeg-xl/lib/
 
-          install_name_tool -change \
-            '@rpath/libsharpyuv.0.dylib' \
-            /usr/local/opt/webp/lib/libsharpyuv.0.dylib \
-            /usr/local/opt/webp/lib/libwebp.7.dylib
-          install_name_tool -change \
-            '@rpath/libjxl_cms.0.11.dylib' \
-            /usr/local/opt/jpeg-xl/lib/libjxl_cms.0.11.dylib \
-            /usr/local/opt/jpeg-xl/lib/libjxl.dylib
+          # install_name_tool -change \
+          #   '@rpath/libsharpyuv.0.dylib' \
+          #   /usr/local/opt/webp/lib/libsharpyuv.0.dylib \
+          #   /usr/local/opt/webp/lib/libwebp.7.dylib
+          # install_name_tool -change \
+          #   '@rpath/libjxl_cms.0.11.dylib' \
+          #   /usr/local/opt/jpeg-xl/lib/libjxl_cms.0.11.dylib \
+          #   /usr/local/opt/jpeg-xl/lib/libjxl.dylib
 
           # Something funky happens with freetype if mono is left
           sudo mv /Library/Frameworks/Mono.framework                           \
