cmake: Fix comments/spellign
Signed-off-by: Swagtoy <me@ow.swag.toys>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -337,9 +337,8 @@ configure_file(config.h.in ${CMAKE_BINARY_DIR}/config.h)
 ## Build tests
 # TODO Finish porting tests to CTest
 option(BUILD_TESTING "Enable tests" OFF)
-message(STATUS "Build with testing: ${BUILD_TESTING}")
+message(STATUS "Build with tests: ${BUILD_TESTING}")
 if(BUILD_TESTING)
-  #include(SuperTux/BuildTests)
   set(CMAKE_CTEST_ARGUMENTS "--output-on-failure")
   enable_testing()
   add_subdirectory(tests)
