Prefer Wayland by default
Only occurs on Linux (and the BSD's too, but i'm not aware [besides FreeBSD] of
how well they support wayland these days, regardless, it would end up ignored anyway, so rather harmless)

See this comment from src/supertux/main.cpp

  /* See commit 254fcc9 for SDL. Most of the Nvidia problems are knocked out (i
   * think) for now thanks to nvidia's open drivers. Wayland is needed for
   * precision scrolling to work (which is used for the editor) and most distros
   * are shipping wayland out of the box, so let's prefer it.
   *
   * When we migrate to SDL3, we can remove this snippet as they've now
   * defaulted to preferring Wayland (if i recall) -- Swagtoy
   */

Signed-off-by: Swagtoy <me@ow.swag.toys>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,7 +153,7 @@ option(ENABLE_OPENGL "Enable OpenGL support" ON)
 include(SuperTux/AddPackage)
 
 add_package(TARGET PNG
-  PKG PNG PKG_USE PNG::PNG PKG_CONFIG libpng REQUIRED) # lol
+  PKG PNG PKG_USE PNG::PNG PKG_CONFIG libpng REQUIRED)
 add_package(TARGET ZLIB
   PKG ZLIB PKG_USE ZLIB::ZLIB PKG_CONFIG zlib REQUIRED)
 add_package(TARGET PhysFS
