Introduce nightly flatpak
Doesn't actually work right now.

Signed-off-by: Swagtoy <me@ow.swag.toys>

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "external/simplesquirrel"]
 	path = external/simplesquirrel
 	url = https://github.com/SuperTux/simplesquirrel
+[submodule "external/shared-modules"]
+	path = external/shared-modules
+	url = https://github.com/flathub/shared-modules
