Add `vcpkg integrate install` to Linux CI file

--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -128,6 +128,7 @@ jobs:
           pushd /
 
           # These libraries don't exist for 32-bit in Ubuntu repositories.
+          vcpkg integrate install
           vcpkg install --triplet x86-linux physfs glew libraqm
 
           popd
