--- a/config.h.in
+++ b/config.h.in
@@ -27,6 +27,7 @@
 
 #define BUILD_CONFIG_DATA_DIR "${BUILD_CONFIG_DATA_DIR}"
 
+#cmakedefine IS_SUPERTUX_RELEASE
 #cmakedefine ENABLE_DISCORD
 #cmakedefine STEAM_BUILD
 
