Drop Ubuntu Touch support
Ubuntu Touch is pretty dead, even given that there is UBPorts (i think?).

Nobody is really motivated or around to maintain it anymore. It often causes
issues with newer SDL2 features and is a complete blocker for SDL3
support. Society is moving on to pmOS or whatever and such anyway; I am hopeful
that Flatpaks will ease that world up.

kubax and Semphris have acknowledged this decision. People are free to maintain
it in their own fork or as a patchset, but as it stands, nobody is interested,
so let's drop it.

Signed-off-by: Swagtoy <me@ow.swag.toys>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,7 @@ else()
   endif()
 endif()
 
-if(EMSCRIPTEN OR UBUNTU_TOUCH OR ANDROID)
+if(EMSCRIPTEN OR ANDROID)
   option(REMOVE_QUIT_BUTTON "Remove the option to quit the game (useful on mobile devices)" ON)
 else()
   option(REMOVE_QUIT_BUTTON "Remove the option to quit the game (useful on mobile devices)" OFF)
@@ -111,11 +111,8 @@ else()
   set(CMAKE_INTERPROCEDURAL_OPTIMIZATION OFF CACHE BOOL "" FORCE)
 endif()
 
-# Detect mobile builds
-option(UBUNTU_TOUCH "Compile the project for an Ubuntu Touch target" OFF)
-
 # Mobile builds
-if(UBUNTU_TOUCH OR ANDROID)
+if(ANDROID)
   option(HIDE_NONMOBILE_OPTIONS "Hide options that are impractical on mobile devices (e. g. changing screen resolution)" ON)
 else()
   option(HIDE_NONMOBILE_OPTIONS "Hide options that are impractical on mobile devices (e. g. changing screen resolution)" OFF)
