--- a/version.h.in
+++ b/version.h.in
@@ -1,5 +1,6 @@
 #ifndef VERSION_H
 #define VERSION_H
 #define PACKAGE_VERSION "${SUPERTUX_PACKAGE_VERSION}"
+#define PACKAGE_VERSION_TAG "${SUPERTUX_PACKAGE_VERSION_TAG}"
 #define LOGO_FILE "${LOGO_FILE}"
 #endif
