Allow compiling SuperTux with upstream SDL2_TTF
References #3460

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,6 +149,8 @@ endif()
 
 option(ENABLE_OPENGL "Enable OpenGL support" ON)
 
+option(USE_SYSTEM_SDL2_TTF "Build SuperTux with system SDL_TTF" OFF)
+
 # Find dependencies
 include(SuperTux/AddPackage)
 
@@ -165,14 +167,21 @@ add_package(TARGET glm
   PKG glm PKG_USE glm::glm CONFIG REQUIRED PKG_CONFIG glm)
 add_package(TARGET Freetype
   PKG Freetype PKG_USE Freetype::Freetype CONFIG REQUIRED PKG_CONFIG freetype2)
-add_package(TARGET RAQM
-  PKG RAQM PKG_USE RAQM CONFIG PKG_CONFIG libraqm raqm)
+if(NOT USE_SYSTEM_SDL2_TTF)
+  # System-installed SDL2_TTF will not have RAQM support, so no need to look for that.
+  add_package(TARGET RAQM
+    PKG RAQM PKG_USE RAQM CONFIG PKG_CONFIG libraqm raqm)
+endif()
 
 if(NOT EMSCRIPTEN)
   add_package(TARGET SDL2
     PKG SDL2 PKG_USE SDL2::SDL2 CONFIG REQUIRED PKG_CONFIG sdl2 SDL2)
   add_package(TARGET SDL2_image
     PKG SDL2_image PKG_USE SDL2_image::SDL2_image CONFIG REQUIRED PKG_CONFIG SDL2_image sdl2_image)
+  if (USE_SYSTEM_SDL2_TTF)
+    add_package(TARGET SDL2_ttf
+      PKG SDL2_ttf PKG_USE SDL2_ttf::SDL2_ttf CONFIG REQUIRED PKG_CONFIG SDL2_ttf sdl2_ttf)
+  endif()
   add_package(TARGET libcurl
     PKG CURL PKG_USE CURL::libcurl PKG_CONFIG libcurl)
   add_package(TARGET OpenAL
@@ -192,8 +201,14 @@ if(TARGET RAQM)
   set(SDL2TTF_RAQM ON)
 endif()
 
+if(USE_SYSTEM_SDL2_TTF)
+  message(WARNING "Building with system-installed SDL_TTF will cause bi-directional (e.g. Arabic) scriptures to not be displayed properly. CI builds should never rely on this.")
+endif()
+
 add_subdirectory(external/sexp-cpp EXCLUDE_FROM_ALL)
-add_subdirectory(external/SDL_ttf EXCLUDE_FROM_ALL)
+if(NOT USE_SYSTEM_SDL2_TTF)
+  add_subdirectory(external/SDL_ttf EXCLUDE_FROM_ALL)
+endif()
 add_subdirectory(external/SDL_SavePNG EXCLUDE_FROM_ALL)
 add_subdirectory(external/simplesquirrel EXCLUDE_FROM_ALL)
 add_subdirectory(external/partio_zip EXCLUDE_FROM_ALL)
