cmake: fix SUPERTUX_CCACHE option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,14 +84,13 @@ else()
   endif()
 endif()
 
-option(SUPERTUX_CCACHE "Whether to prefer CCache" OFF)
-
+option(SUPERTUX_CCACHE "Whether to prefer ccache" OFF)
 if(SUPERTUX_CCACHE)
-  find_program(found ccache)
-  if(found)
-    message(STATUS "Using CCache: ${found}")
-    set_property(GLOBAL PROPERTY CMAKE_C_COMPILER_LAUNCHER "${found}")
-    set_property(GLOBAL PROPERTY CMAKE_CXX_COMPILER_LAUNCHER "${found}")
+  find_program(CCACHE_PATH ccache)
+  if(CCACHE_PATH)
+    message(STATUS "Using CCache: ${CCACHE_PATH}")
+    set(CMAKE_C_COMPILER_LAUNCHER "${CCACHE_PATH}")
+    set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE_PATH}")
   endif()
 endif()
 
